@@ -1,5 +1,11 @@
 2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/i18n.h (gettext): Inline instead of using #define.
+	(grub_gettext): Likewise.
+	(_): Likewise.
+
+2010-05-18  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* Makefile.in (CPPFLAGS): Replace -DGRUB_LIBDIR with
 	-DGRUB_PKGLIBROOTDIR= and prepend @PACKAGE_TARNAME@. All users updated.
 	* util/grub-mkimage.c (image_targets): Add i386-multiboot.
